--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
     justify-content: center;
     align-items: center;
 
-    background-color: #454647;
+    background-color: $grey;
 
     font-family: $base-font-family;
     text-align: center;
